--- a/styles.scss
+++ b/styles.scss
@@ -27,8 +27,24 @@ button {
   all: unset;
 }
 
-.container {
+.perlinback {
+  position: fixed;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  width: 100%;
+  opacity: 0.15;
+  background-image: url("./assets/perlinback.png");
+  background-position-x: center;
+  animation-fill-mode: forwards;
+  animation-duration: 0.3s;
+}
+
+.wrapper {
   margin: auto;
+  position: relative;
+  z-index: 2;
   padding: 0 120px;
   max-width: 1440px;
   box-sizing: border-box;
@@ -65,7 +81,7 @@ button {
 
 .header {
   margin-top: 32px;
-  height: 40;
+  height: 40px;
   display: flex;
 
   &__logo {
@@ -89,46 +105,94 @@ button {
       }
 
       &:last-child {
-        margin: -4px -1px 0px 41px;
+        margin: -1px -1px 0px 41px;
       }
     }
   }
 }
 
 .main {
-  padding-top: 150px;
-  display: flex;
-  flex-direction: column;
   position: relative;
-  height: calc(100vh - $header-height);
-  width: 100%;
-  box-sizing: border-box;
+  margin-top: 120px;
+  padding-left: 33px;
 
-  &__decorline {
+  &__line {
     position: absolute;
-    top: -27px;
+    top: 0;
     left: -3px;
   }
 
-  &__title {
-    position: relative;
-    color: $light;
-    font-size: 715px;
-    line-height: 1;
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    letter-spacing: -10px;
-    text-transform: uppercase;
-  }
-
   &__subtitle {
-    position: absolute;
     color: $accent-red;
     font-size: 36px;
     font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 3.85px;
-    left: 30px;
-    top: -10.5px;
+    letter-spacing: 1.1px;
+    padding-top: 12px;
+  }
+
+  &__text-video {
+    width: 98%;
+    margin-top: 40px;
+  }
+}
+
+.text-video {
+  position: relative;
+  aspect-ratio: 1 / 0.4485;
+  overflow: hidden;
+
+  &__video {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    -webkit-clip-path: url(#clipPathMars);
+    clip-path: url(#clipPathMars);
+  }
+
+  &__svg {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+}
+
+@keyframes moveBackgroundToLeftFromCenter {
+  0% {
+    background-position-x: center;
+  }
+  100% {
+    background-position-x: left;
+  }
+}
+
+@keyframes moveBackgroundToRightFromCenter {
+  0% {
+    background-position-x: center;
+  }
+  100% {
+    background-position-x: right;
+  }
+}
+
+@keyframes moveBackgroundToCenterFromRight {
+  0% {
+    background-position-x: right;
+  }
+  100% {
+    background-position-x: center;
+  }
+}
+
+@keyframes moveBackgroundToCenterFromLeft {
+  0% {
+    background-position-x: left;
+  }
+  100% {
+    background-position-x: center;
   }
 }
