--- a/styles.scss
+++ b/styles.scss
@@ -53,7 +53,14 @@ input::-webkit-inner-spin-button {
   min-height: 100vh;
   height: 100%;
   width: 100%;
+
   background-image: url("/assets/background.png");
+  background-image: -webkit-image-set(
+    url("/assets/background.png") 1x,
+    url("/assets/background.webp") type("image/webp") 1x
+  );
+  background-image: image-set(url("/assets/background.webp") type("image/webp") 1x, url("/assets/background.png") 1x);
+
   background-position-x: left;
   background-attachment: fixed;
   animation-fill-mode: forwards;
@@ -233,6 +240,11 @@ input::-webkit-inner-spin-button {
   position: relative;
   aspect-ratio: 1 / 0.4485;
   overflow: hidden;
+  visibility: hidden;
+
+  &_loaded {
+    visibility: visible;
+  }
 
   &__video {
     display: block;
