--- a/styles.scss
+++ b/styles.scss
@@ -463,9 +463,13 @@ input::-webkit-inner-spin-button {
     margin: 0;
     font-family: "Bebas Neue";
     font-weight: 400;
-    font-size: 60px;
+    font-size: 36px;
     line-height: 1;
     letter-spacing: 3.1px;
+
+    @media (min-width: 540px) {
+      font-size: 60px;
+    }
 
     @media (min-width: 730px) {
       font-size: 80px;
