--- a/styles.scss
+++ b/styles.scss
@@ -53,6 +53,7 @@ input::-webkit-inner-spin-button {
   min-height: 100vh;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 
   background-image: url("/assets/background.png");
   background-image: -webkit-image-set(
@@ -76,6 +77,7 @@ input::-webkit-inner-spin-button {
   min-height: 100vh;
   height: 100%;
   width: 100%;
+  overflow: hidden;
   opacity: 0.15;
   background-image: url("/assets/perlinback.png");
 }
